# neoglyph

./: .gitignore  LICENSE  README.md  advanced_evolution_demo.py  debug_tree_genome.py  evolution_demo.py  main.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  run_benchmarks.py
docs/: ADVANCED_EVOLUTION.md  api_reference.md  guide_explainable_ai.md  guide_physics_discovery.md  guide_symbolic_regression.md  index.md  toolchain.md
examples/: NeoGlyph.py  demo_explainable_ai.py  demo_functions.py  demo_hero.py  demo_physics.py  demo_readme.py  evolution_core_3_1_verification.py  evolution_core_3_2_verification.py  evolution_core_3_demo.py  main.py  train_xor.py
neoglyph/: __init__.py  applications.py  evolution.py  evolution_advanced.py  genome.py  genome_linear.py  ops.py  profiler.py  tensor.py  visualization.py  vm.py
tests/: test_applications.py  test_evolution.py  test_evolution_demo.py  test_genome.py  test_grad.py  test_ops.py  test_profiler.py  test_tensor.py  test_tree_genome.py
