[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neoglyph"
version = "4.0.0"
description = "符号回归与程序进化系统 — 让AI自己发现数学公式"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/cydktx/neoglyph"
Repository = "https://github.com/cydktx/neoglyph"